# image-filters

./: CMakeLists.txt  Parser.cpp  Parser.h  README.md  image.cpp  image.h  image_processor.cpp
Filters/: BaseFilter.cpp  BaseFilter.h  CropFilter.cpp  CropFilter.h  EdgeFilter.cpp  EdgeFilter.h  GaussianBlur.cpp  GaussianBlur.h  GrayscaleFilter.cpp  GrayscaleFilter.h  NegativeFilter.cpp  NegativeFilter.h  SharpFilter.cpp  SharpFilter.h  SobelFilter.cpp  SobelFilter.h
test_script/: test_image_processor.py
tests/: test_parser.cpp
